2007-05-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.4 released.

	* Change: src/kahua/user.scm
	  Export kahua-current-user-class.

	* Change: doc/*.ja doc/*/*.ja
	  Convert their character encoding from euc-jp to utf-8.
	  Rewrote almost half of doc/Setup.ja.

2007-05-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: emacs/kahua.el.in
	  Compatibility with Emacs 21 (that doesn't have read-directory-name).

2007-05-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/server.scm
	  Context didn't have "x-kahua-remote-addr".

2007-05-25  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/test/worker.scm
	  Lack of flush after send request to worker.

2007-05-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-dbutil.scm
	  Add support for -S and -c command line options.
	  It make kahua-dbutil can run in source tree (w/o install).

	* Fix: src/kahua/persistence.scm, src/kahua/persistence/dbi.scm,
	       src/kahua/persistence/mysql.scm, src/kahua/persistence/postgresql.scm
	  kahua-dbutil was broken against Kahua 0.7 or prior version
	  database on MySQL or PostgreSQL.

2007-05-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua-server.scm
	  Unsafe implementation of kahua-write-static-file.

2007-04-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.3 released.

2007-04-26  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/elem.scm, src/kahua/server.scm
	  Fix wrong format of entity reference node(&, &:, &/).

2007-04-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Add: check.scm
	  Change: configure.ac
	  Check Gauche version and its threading type, and
	  system thread type on Linux.

2007-04-23  Tatsuya BIZENN  <bizenn@arthub.net>

	* Merge: from HEAD.
	  ChangeLog entries from 2007-03-07 to 2007-04-20 are
	  merged from HEAD.

2007-04-20  Katsutoshi Itoh <cut-sea@kahua.org>

	* Fix: src/persistent.scm
	  bug fix for make-kahua-collection with :index :any.
	  When make-kahua-collection with :index :any, then,
	  index cache was destroyed.